# random-grouping

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  config.yaml  environment.yml  grouping.py  pyproject.toml  pytask.ini  results.yaml  setup.cfg  setup.py
.conda/: meta.yaml
.envs/: testenv.yml
.github/: continuous-integration-workflow.yml
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: main.yml  pre-commit-workflow.yml  python-package-conda.yml
data/: matching.txt  names.csv
example_data/: matching.txt  matchings_history.csv  names.csv
randomgroups/: __init__.py  algorithm.py  create_groups.py  create_matching.py  read_and_write.py
src/: config.py  config.yaml  grouping.py  read_and_write.py  scoring.py  shared.py  task_create_grouping.py  task_create_groups.py  task_preliminaries.py  task_update.py
src/data/: matchings_history.csv  names.csv  previous_groupings.csv
src/randomgroups/: __init__.py  algorithm.py  create_matching.py  io.py
tests/: test_algorithm.py  test_create_matching.py  test_io.py
tests/data/: matching.txt  matchings_history.csv  names.csv  names_assortative.csv
