[metadata]
name = randomgroups
description = Algorithm to create recurring random groups
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timmens/random-grouping
author = Tim Mensinger
author_email = mensingertim@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    click
    numpy>=1.17.0
    openpyxl
    pandas
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/randomgroups/_version.py
